[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/Meerkats-1.png" type="Texture" id=1]
[ext_resource path="res://scripts/Triple_Shooter.gd" type="Script" id=2]
[ext_resource path="res://scenes/Gun.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/Gun-3.png" type="Texture" id=4]

[sub_resource type="CapsuleShape2D" id=6]
radius = 11.3333
height = 17.3333

[sub_resource type="CircleShape2D" id=2]
radius = 1000.0

[sub_resource type="CapsuleShape2D" id=5]
radius = 13.3333
height = 17.3333

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 2 )
health = 50

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 1, -8 )
scale = Vector2( 3, 3 )
shape = SubResource( 6 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
shape = SubResource( 2 )

[node name="Hitbox" type="Area2D" parent="." groups=["enemy"]]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 2, -9 )
scale = Vector2( 3, 3 )
shape = SubResource( 5 )

[node name="Label" type="Label" parent="."]
margin_left = -39.0
margin_top = -67.0
margin_right = 1.0
margin_bottom = -53.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gun" parent="." instance=ExtResource( 3 )]
rotation = 3.14159

[node name="Sprite" type="Sprite" parent="Gun"]
position = Vector2( 28, -12.9999 )
texture = ExtResource( 4 )
flip_v = true

[node name="Shoot Timer" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="timeout" from="Shoot Timer" to="." method="_on_Shoot_Timer_timeout"]
